--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temp Mail Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        .copy-button {
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            padding: 6px 10px;
+            border: none;
+            border-radius: 5px;
+            margin-left: 10px;
+        }
+    </style>
     <script>
+        async function fetchNamespace() {
+            try {
+                const response = await fetch('/namespace');
+                const data = await response.json();
+                return data.namespace;
+            } catch (error) {
+                console.error('Failed to fetch namespace:', error);
+                return null;
+            }
+        }
+
         async function generateNewMail() {
             try {
-                const response = await fetch('/new');
-                const data = await response.json();
-                const email = data.email;
-                const namespace = email.split('.')[0]; // Extract the namespace from the generated email
-                const tag = email.split('.')[1];
+                const namespace = await fetchNamespace();
+                if (!namespace) {
+                    console.error('Namespace not found');
+                    return;
+                }
+                const tag = generateRandomTag();
+                const email = `${namespace}.${tag}@inbox.testmail.app`;
                 localStorage.setItem('tempmailTag', tag);
                 localStorage.setItem('tempmailNamespace', namespace);
                 displayCurrentEmail(email);
@@ -25,7 +49,6 @@
         async function fetchEmails(tag) {
             try {
                 const namespace = localStorage.getItem('tempmailNamespace');
-                const { default: fetch } = await import('node-fetch');
                 const response = await fetch(`/mails?tag=${namespace}.${tag}`);
                 const data = await response.json();
                 displayEmails(data.emails);
@@ -52,17 +75,32 @@
 
         function displayCurrentEmail(email) {
             document.getElementById('currentEmail').textContent = email;
+            const copyButton = document.getElementById('copyButton');
+            copyButton.setAttribute('data-clipboard-text', email);
         }
 
-        document.addEventListener('DOMContentLoaded', () => {
+        function copyToClipboard() {
+            const email = document.getElementById('currentEmail').textContent;
+            const textarea = document.createElement('textarea');
+            textarea.value = email;
+            textarea.style.position = 'fixed';
+            document.body.appendChild(textarea);
+            textarea.focus();
+            textarea.select();
+            document.execCommand('copy');
+            document.body.removeChild(textarea);
+            alert('Email copied to clipboard!');
+        }
+
+        document.addEventListener('DOMContentLoaded', async () => {
             const tag = localStorage.getItem('tempmailTag');
             const namespace = localStorage.getItem('tempmailNamespace');
-            if (tag && namespace) {
+            if (!tag || !namespace) {
+                await generateNewMail();
+            } else {
                 const currentEmail = `${namespace}.${tag}@inbox.testmail.app`;
                 displayCurrentEmail(currentEmail);
                 fetchEmails(tag);
-            } else {
-                generateNewMail();
             }
         });
 
@@ -89,7 +127,8 @@
             <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" onclick="refreshEmails()">Refresh Mails</button>
         </div>
         <div class="text-center mb-6">
-            <p class="text-xl">Current Email: <span id="currentEmail" class="font-mono text-blue-600"></span></p>
+            <p class="text-xl">Current Email: <span id="currentEmail" class="font-mono text-blue-600"></span>
+            <button id="copyButton" class="copy-button" onclick="copyToClipboard()">Copy</button></p>
         </div>
         <div id="emailList" class="bg-white p-6 rounded-lg shadow-lg">
             <!-- Emails will be displayed here -->
